maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {

def keepHandOnSideWall()={
	gauche()
	if(estFaceMur){
		droite
		if(!estfaceMur){avance}
	}
	
}

while(!estSurBiscuit){ 
keepHandOnSideWall()
}
}
